# GRAIL

./: .env  .env.example  .gitignore  README.md  pyproject.toml
experiments/: EXPERIMENT_STATUS.md  README.md  __init__.py  exp_attack_resistance.py  exp_baseline_comparison.py  exp_correctness_detection.py  exp_cross_model_validation.py  exp_enhanced_precision_sensitivity.py  exp_gpu_robustness.py  exp_mantissa_error_analysis.py  exp_model_resistance.py  exp_performance_benchmark.py  exp_precision_comparison.py  exp_prompt_tampering.py  exp_topk_exponent_error.py  exp_topk_index_mismatch.py  run_all_experiments.py
experiments/results/: exp_attack_resistance.json  exp_baseline_comparison.json  exp_correctness_detection.json  exp_cross_model_validation.json  exp_enhanced_precision_sensitivity.json  exp_gpu_robustness.json  exp_model_resistance.json  exp_performance_benchmark.json  exp_precision_comparison.json  exp_prompt_tampering.json  exp_topk_exponent_error.json  experiment_suite_summary.json
grail/: __init__.py  grail.py
results/: basic_evaluation_development_20250728_163309.json
tests/: test_benchmarks.py  test_blackhat.py  test_protocol.py
toploc/: icml.bbl  icml.tex
