[project]
name = "grail"
version = "0.1.0"
description = "RL as a service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hypothesis>=6.136.6",
    "numpy>=2.2.6",
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "pytest-benchmark>=5.1.0",
    "torch>=2.7.1",
    "transformers>=4.54.0",
    "python-dotenv>=0.21.0",
    "bittensor",
    "bittensor-cli",
    "chutes",
    "aiohttp>=3.10.11",
    "ipykernel>=6.0.0",
    "click>=8.0.0",
    "click-log>=0.4.0",
    "alive_progress>=3.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24",
    "redis==5.*",
    "boto3>=1.34",
    "huggingface_hub",
    "datasets",
    "aiobotocore>=2.23.0",
    "botocore>=1.38.27",
    "tabulate>=0.9.0",
    "prometheus-client>=0.21.0",
]

[tool.setuptools]
packages = ["grail"]
include-package-data = true

[project.scripts]
grail = "grail:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
grail = { path = ".", editable = true }
